# claude-ext

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  config.yaml.example  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: bridge.py  compact_prompt.md  engine.py  events.py  extension.py  mcp_base.py  mcp_tags.py  pending.py  registry.py  session.py  session_context.py  session_tags.py  status.py  templates.py
docs/: ARCHITECTURE.md
scripts/: batch_import.py  dedup_historical.py  update-external-tools.sh
tests/: test_bridge.py  test_browser_extension.py  test_crypto_evm.py  test_crypto_extension.py  test_crypto_portfolio.py  test_crypto_x402.py  test_dependency_sort.py  test_events.py  test_extension_imports.py  test_gateway_mode.py  test_health_check.py  test_heartbeat_extension.py  test_heartbeat_store.py  test_heartbeat_trigger_cli.py  test_mcp_registry.py  test_memory_extension.py  test_memory_graph.py  test_memory_mcp.py  test_memory_store.py  test_pending_store.py  test_registry.py  test_session_ask_extension.py  test_session_context.py  test_session_customizer.py  test_session_tags.py  test_stealth_browser.py  test_subagent_extension.py  test_subagent_store.py  test_subagent_worktree.py  test_system_prompt_file.py  test_telegram_draft.py  test_telegram_edit_stream.py  test_telegram_formatting.py  test_telegram_media.py  test_telegram_prefix.py  test_telegram_threading.py  test_telegram_typing.py  test_template_overrides.py  test_templates.py  test_vault_extension.py  (+2 more)
(+50 files in other folders)
